= 0.11.0 (2019-03-18)

* Support separate log group and process primary group on Unicorn 5.5.0+ using :group option (jeremyevans)

* Make Roda pg_disconnect plugin support new Roda dispatch API (jeremyevans)

= 0.10.0 (2018-05-21)

* Use Mail.eager_autoload! if using the mail gem (jeremyevans)

* Add bin files to gemspec (jeremyevans)

= 0.9.0 (2018-05-02)

* Initial public release