@@ -1,3 +1,7 @@
+= master
+
+* Do not reference the rack middleware unicorn loads by default if unicorn is set to not load default middleware (jeremyevans)
+
 = 0.11.0 (2019-03-18)
 
 * Support separate log group and process primary group on Unicorn 5.5.0+ using :group option (jeremyevans)
